--- a/clone_one/index.html
+++ b/clone_one/index.html
@@ -31,11 +31,13 @@
                     </li>
                 </ul>
             </div>
+
+            <a class="btn btn-danger">Participate </a>
         </div>
     </nav>
 
     <!-- Showcase -->
-    <section class="bg-dark text-light p-5 text-center text-sm-start">
+    <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
@@ -56,7 +58,12 @@
         <div class="container">
             <div class="d-md-flex justify-content-between align-items-center">
                 <h3 class="mb-3 mb-md-0">Sign Up for our Newsletter</h3>
-            </div>
+
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Enter Email Address">
+                    <button class="btn btn-dark btn-lg" type="button">Button</button>
+                </div>
+            </div>  
         </div>
     </section>
 
