--- a/clone_one/index.html
+++ b/clone_one/index.html
@@ -4,7 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Frontend BootCamp</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+    <!-- Option 1: Include in HTML -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- Nav Bar Section  -->
@@ -47,7 +53,7 @@
                     </p>
                     <button class="btn btn-primary btn-lg">Start Enrollment</button>
                 </div>
-                <img class="img-fluid w-50 d-none d-sm-block" src="/img/showcase.svg" alt="">
+                <img class="img-fluid w-50 d-none d-sm-block" src="img/showcase.svg" alt="">
             </div>
         </div>
 
@@ -59,13 +65,109 @@
             <div class="d-md-flex justify-content-between align-items-center">
                 <h3 class="mb-3 mb-md-0">Sign Up for our Newsletter</h3>
 
-                <div class="input-group">
+                <div class="input-group news-input">
                     <input type="text" class="form-control" placeholder="Enter Email Address">
                     <button class="btn btn-dark btn-lg" type="button">Button</button>
                 </div>
             </div>  
         </div>
     </section>
+
+    <!-- Boxes  -->
+    <section class="p-5">
+        <div class="container">
+            <div class="row text-center g-4">
+                <div class="col-md">
+                    <div class="card bg-dark text-white">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi-laptop"></i>
+                            </div>
+
+                            <h3 class="card-title mb-3">
+                                Virtual
+                            </h3>
+
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea laboriosam adipisci, eaque ratione pariatur aperiam!
+                            </p>
+
+                            <a href="#" class="btn btn-primary">Read More</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md">
+                    <div class="card bg-secondary text-white">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi-person-square"></i>
+                            </div>
+
+                            <h3 class="card-title mb-3">
+                                Hybrid
+                            </h3>
+
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea laboriosam adipisci, eaque ratione pariatur aperiam!
+                            </p>
+
+                            <a href="#" class="btn btn-dark">Read More</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md">
+                    <div class="card bg-dark text-white">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi-people"></i>
+                            </div>
+
+                            <h3 class="card-title mb-3">
+                                In Person
+                            </h3>
+
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea laboriosam adipisci, eaque ratione pariatur aperiam!
+                            </p>
+
+                            <a href="#" class="btn btn-primary">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Learn Section  -->
+    <section id="learn" class="p-5">
+        <div class="container">
+            <div class="row align-item-center justify-content-between">
+                <div class="col-md">
+                    <img src="img/fundamental.svg" class="img-fluid" alt="">
+                </div>
+
+                <div class="col-md p-5">
+                    <h2>Learn the Fundamentals</h2>
+
+                    <p class="lead">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate temporibus impedit quidem cupiditate, reprehenderit doloremque?
+                    </p>
+
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum qui numquam vel. Suscipit, sequi doloremque atque minus recusandae fuga odit praesentium quibusdam placeat quod labore ipsum. Consectetur et ratione vero.
+                    </p>
+
+                    <a href="#" class="btn btn-light mt-3">
+                        <i class="bi bi-chevron-right"></i>Read More
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
