--- a/clone_one/index.html
+++ b/clone_one/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- Nav Bar Section  -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
         <div class="container">
             <a href="#" class="navbar-brand">Frontend BootCamp</a>
 
@@ -168,6 +168,37 @@
         </div>
     </section>
 
+    <section id="learn" class="p-5 bg-dark text-light">
+        <div class="container">
+            <div class="row align-item-center justify-content-between">
+                
+                <div class="col-md p-5">
+                    <h2>Learn React</h2>
+
+                    <p class="lead">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate temporibus impedit quidem cupiditate, reprehenderit doloremque?
+                    </p>
+
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum qui numquam vel. Suscipit, sequi doloremque atque minus recusandae fuga odit praesentium quibusdam placeat quod labore ipsum. Consectetur et ratione vero.
+                    </p>
+
+                    <a href="#" class="btn btn-light mt-3">
+                        <i class="bi bi-chevron-right"></i>Read More
+                    </a>
+                </div>
+
+                <div class="col-md">
+                    <img src="img/react.svg" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- FAQS  -->
+    <section id="questions" class="p-5">
+
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
