--- a/clone_one/index.html
+++ b/clone_one/index.html
@@ -204,18 +204,20 @@
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne">
-                      Accordion Item #1
+                      Where exactly are you?
                     </button>
                   </h2>
                   <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                    <div class="accordion-body">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi architecto qui provident ullam porro nemo, delectus aspernatur deserunt laboriosam possimus illo repellendus dolores! Perferendis adipisci quaerat voluptate consectetur nisi est nesciunt eius odio, ab fugiat rerum nulla porro cum commodi molestias exercitationem consequuntur! Dolorem delectus libero iusto expedita ullam ratione!
+                    </div>
                   </div>
                 </div>
 
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo">
-                      Accordion Item #2
+                      How much does it cost to attend ?
                     </button>
                   </h2>
                   <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -225,16 +227,204 @@
 
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree">
-                      Accordion Item #3
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-three">
+                      What do I need to know?
                     </button>
                   </h2>
-                  <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                  <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas eaque vero laborum reprehenderit harum velit placeat necessitatibus autem mollitia voluptates quis repudiandae optio in fuga inventore dolorem ut perspiciatis, porro magnam culpa repellat maxime facere aspernatur architecto? Omnis quo sed veritatis nulla dolor quis, harum aspernatur nobis impedit, incidunt sapiente.
+                    </div>
+                  </div>
+                </div>
+
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-four">
+                      How do I Signup?
+                    </button>
+                  </h2>
+                  <div id="question-four" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas eaque vero laborum reprehenderit harum velit placeat necessitatibus autem mollitia voluptates quis repudiandae optio in fuga inventore dolorem ut perspiciatis, porro magnam culpa repellat maxime facere aspernatur architecto? Omnis quo sed veritatis nulla dolor quis, harum aspernatur nobis impedit, incidunt sapiente.
+                    </div>
+                  </div>
+                </div>
+
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-five">
+                      Do you help find a Job?
+                    </button>
+                  </h2>
+                  <div id="question-five" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas eaque vero laborum reprehenderit harum velit placeat necessitatibus autem mollitia voluptates quis repudiandae optio in fuga inventore dolorem ut perspiciatis, porro magnam culpa repellat maxime facere aspernatur architecto? Omnis quo sed veritatis nulla dolor quis, harum aspernatur nobis impedit, incidunt sapiente.
+                    </div>
+                  </div>
+                </div>
+
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-six">
+                      Where exactly are you located?
+                    </button>
+                  </h2>
+                  <div id="question-six" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas eaque vero laborum reprehenderit harum velit placeat necessitatibus autem mollitia voluptates quis repudiandae optio in fuga inventore dolorem ut perspiciatis, porro magnam culpa repellat maxime facere aspernatur architecto? Omnis quo sed veritatis nulla dolor quis, harum aspernatur nobis impedit, incidunt sapiente.
+                    </div>
                   </div>
                 </div>
             </div>
         </div>
+    </section>
+
+    <!-- Instructors -->
+    <section id="Instructors" class="p-5 bg-primary">
+        <div class="container">
+            <h2 class="text-center text-light">Our Instructors</h2>
+            <p class="lead text-center text-white mb-5">Our Instructors all have 5+ years of working as a web developer in the industry</p>
+
+            <div class="row g-4">
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3" alt="">
+
+                            <h3 class="card-title mb-3">John Doe</h3>
+
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, tenetur saepe? Similique cupiditate corrupti molestiae?</p>
+
+                            <a href="#">
+                                <i class="bi bi-twitter text-dark mx-1"></i>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-facebook text-dark mx-1"></i>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-instagram text-dark mx-1"></i>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-linkedin text-dark mx-1"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/women/11.jpg" class="rounded-circle mb-3" alt="">
+
+                            <h3 class="card-title mb-3">Jane Doe</h3>
+
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, tenetur saepe? Similique cupiditate corrupti molestiae?</p>
+
+                            <a href="#">
+                                <i class="bi bi-twitter text-dark mx-1"></i>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-facebook text-dark mx-1"></i>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-instagram text-dark mx-1"></i>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-linkedin text-dark mx-1"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/men/12.jpg" class="rounded-circle mb-3" alt="">
+
+                            <h3 class="card-title mb-3">Steve Smith</h3>
+
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, tenetur saepe? Similique cupiditate corrupti molestiae?</p>
+
+                            <a href="#">
+                                <i class="bi bi-twitter text-dark mx-1"></i>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-facebook text-dark mx-1"></i>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-instagram text-dark mx-1"></i>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-linkedin text-dark mx-1"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/women/12.jpg" class="rounded-circle mb-3" alt="">
+
+                            <h3 class="card-title mb-3">Serah Smith</h3>
+
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, tenetur saepe? Similique cupiditate corrupti molestiae?</p>
+
+                            <a href="#">
+                                <i class="bi bi-twitter text-dark mx-1"></i>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-facebook text-dark mx-1"></i>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-instagram text-dark mx-1"></i>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-linkedin text-dark mx-1"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contacts and Map  -->
+    <section class="p-5">
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-md">
+                    <h2 class="text-center mb-4">Contact Info</h2>
+
+                    <ul class="list-group list-group-flush lead">
+                        <li class="list-group-item">
+                            <span class="fw-bold">Main Location:</span> 50 Main Boston St LA
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Student Phone:</span> (555) 555-5555
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Enrollment Phone:</span> (333) 333-3333
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Main Location:</span> 50 Main Boston St LA
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Main Location:</span> 50 Main Boston St LA
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Main Location:</span> 50 Main Boston St LA
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
